--- a/templates/partials/_ratesTable.html
+++ b/templates/partials/_ratesTable.html
@@ -66,10 +66,10 @@
                                             <p class="text-xxs  mb-0">{{ item.get_Recommendation_display }}</p>
                                         </td>
                                         <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
-                                            <p class="text-xxs  mb-0">{{ item.CurrenncyValue }}</p>
+                                            <p class="text-xxs  mb-0">{{ item.CurrenncyValue |floatformat:-2  }}</p>
                                         </td>
                                         <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
-                                            <p class="text-xxs  mb-0">{{ item.FairValue }}</p>
+                                            <p class="text-xxs  mb-0">{{ item.FairValue |floatformat:-2  }}</p>
                                         </td>
 {#                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">#}
 {#                                            {% if item.changeFair %}#}
@@ -81,7 +81,7 @@
 {#                                            {% endif %}#}
 {#                                        </td>#}
                                         <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
-                                            <p class="text-xxs  mb-0">{{ item.MarketValue }}</p>
+                                            <p class="text-xxs  mb-0">{{ item.MarketValue |floatformat:-2 }}</p>
                                         </td>
 {#                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">#}
 {#                                            {% if item.changeMarket %}#}
