--- a/userInterface/templates/userInterface/expect-list.html
+++ b/userInterface/templates/userInterface/expect-list.html
@@ -49,8 +49,8 @@
 
             </div>
           <div class="card-footer">
-              <div class="row justify-content-between">
-                  <div class="col-4">
+              <div class="row justify-content-end">
+                  <div class="col-1">
                       <a href="{% url 'all_expect' %}" class="btn btn-sm btn-round bg-maal text-white">المزيد</a>
                   </div>
               </div>
@@ -74,12 +74,11 @@
                     </div>
 
                 </div>
-
-                                <div class="col-lg-6 pt-2">
+                <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
-                        <div class="card-header">
-                            <div class="col-12 justify-content-center pt-4">
-                                <p>أكثر 5 شركات حيث الأرباح الفعلية</p>
+                        <div class="card-header pt-6">
+                            <div class="col-12 justify-content-center">
+                                <p>أكثر 5 شركات من حيث الأرباح فى الربع الثانى 2020 </p>
                             </div>
                         </div>
                         <div class="card-body justify-content-center">
@@ -88,27 +87,28 @@
                     </div>
 
                 </div>
+                
 
     </div>
      <div class="row pt-3">
-                        <div class="col-lg-6 pt-2">
-                    <div class="card z-index-0 mx-auto box-shadow h-100">
-                        <div class="card-header pt-6">
-                            <div class="col-12 justify-content-center">
-                                <p>أكثر 5 شركات من حيث الأرباح فى الربع الثانى 2020 </p>
-                            </div>
-                        </div>
-                        <div class="card-body justify-content-center">
-                            <canvas id="fair2-chart"></canvas>
-                        </div>
+        <div class="col-lg-6 pt-2">
+            <div class="card z-index-0 mx-auto box-shadow h-100">
+                <div class="card-header">
+                    <div class="col-12 justify-content-center" style="padding-top: 2.4rem !important;">
+                        <p>أكثر 5 شركات حيث الأرباح الفعلية</p>
                     </div>
-
                 </div>
+                <div class="card-body justify-content-center">
+                    <canvas id="fair2-chart"></canvas>
+                </div>
+            </div>
+
+        </div>
 
                                 <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header pt-4">
-                            <div class="col-12 justify-content-center">
+                            <div class="col-12 justify-content-center" style="padding-top: 2.5rem !important;">
                                 <p>أكثر 5 شركات من حيث الأرباح فى الربع الثالث 2020 </p>
                             </div>
                         </div>
