--- a/owners/templates/owners/createOwner.html
+++ b/owners/templates/owners/createOwner.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block title %}
 كبار الملاك 
 {% endblock %}
@@ -22,12 +22,8 @@
                             <form  method="post">
                                 {% include 'partials/_messages.html' %}
             {% csrf_token %}
-                                     {% for filed in form %}
-                                                    <div class="form-group">
-        
-                                                        {{ filed }}
-                                                    </div>
-                                                {% endfor %}
+            {{ form|crispy }}
+
                   <button type="submit" class="btn btn-sm text-white bg-maal">
                                    إضافة
                                </button>
