--- a/templates/partials/_ownerTable.html
+++ b/templates/partials/_ownerTable.html
@@ -37,7 +37,7 @@
 
                     </td>
                     <td class="align-middle text-center text-xxs">
-                     <p class="text-xxs">{{ item.TotalPriceArrows |floatformat:2    }}</p>
+                     <p class="text-xxs">{{ item.TotalPriceArrows |floatformat:2  |intcomma  }}</p>
                     </td>
 
                                    {% if request.user.is_emp or request.user.is_admin   %}
