--- a/userInterface/templates/userInterface/capital-profile.html
+++ b/userInterface/templates/userInterface/capital-profile.html
@@ -20,12 +20,13 @@
         <div class="row gx-4">
           <div class="col-auto">
             <div class="avatar avatar-xl position-relative">
-                {% if data.logo %}
+              <img src="{% static 'images/logo.png' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+                {% comment %} {% if data.logo %}
                     <img src="{{ data.logo.url }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
                 {% else %}
-                    <img src="{% static 'images/company_logo.png' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+                    <img src="{% static 'images/logo.png' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
 
-                {% endif %}
+                {% endif %} {% endcomment %}
             </div>
           </div>
           <div class="col-auto my-auto">
