--- a/userInterface/templates/userInterface/expectreal-list.html
+++ b/userInterface/templates/userInterface/expectreal-list.html
@@ -54,7 +54,7 @@
                         <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header pt-6">
-                            <div class="col-12 justify-content-center pt-4">
+                            <div class="col-12 justify-content-center">
                                 <p>                أكثر 5 شركات قربا للتوقعات
                                 </p>
                             </div>
@@ -69,7 +69,7 @@
                                 <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow">
                         <div class="card-header">
-                            <div class="col-12 justify-content-center ">
+                            <div class="col-12 justify-content-center" style="padding-top: 2.4rem !important;">
                                 <p>أكثر 5 شركات حيث الأرباح الفعلية</p>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
 
     </div>
 
-    <div class="row pt-3">
+    {% comment %} <div class="row pt-3">
                         <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header pt-6">
@@ -101,7 +101,7 @@
                                 <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header">
-                            <div class="col-12 justify-content-center pt-4">
+                            <div class="col-12 justify-content-center" style="padding-top: 2.5rem !important;">
                                 <p>أكثر 5 شركات من حيث الأرباح فى الربع الثالث 2020 </p>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
 
                 </div>
 
-    </div>
+    </div> {% endcomment %}
     </div>
 </section>
 {% endblock body %}
