--- a/userInterface/templates/userInterface/home-page.html
+++ b/userInterface/templates/userInterface/home-page.html
@@ -72,7 +72,11 @@
             {% include 'partials/_companiesArrowTable.html' with companyarrows=arrows %}
        </div>
        <div class="card-footer">
+           <div class="col-12">
+               <p class="text-muted"> نسب كبار الملاك الموجودة بالجدول يتم الأعلان عنها وفقا للتسوية بعد جلستى تداول</p>
+           </div>
         <div class="col-12 d-flex justify-content-end">
+             
             <a href="{% url 'arrows-sen-users' %}">
                 <span
                     class="badge badge-sm bg-maal">المزيد</span></a>
