--- a/templates/partials/_companyArrowsOwnersTable.html
+++ b/templates/partials/_companyArrowsOwnersTable.html
@@ -28,11 +28,25 @@
         <tbody>
             {% for item in companyarrows %}
                 <tr>
-                                    <td class="align-middle text-center text-xxs">
-                                        <a href="{% url 'user-company' item.company.id %}">
-                            <p class="text-xxs  mb-0">{{ item.company.name }}</p>
-                        </a>
-                    </td>
+                    <td style="justify-content: space-around; ">
+                        {% if request.user.user_type == 3 %}
+                         <a  href="{% url 'add_wish' item.CompanyEntered.id %}" style="margin-inline:0.2rem ;">
+                           <i class="far fa-bookmark"></i>
+</a>
+
+{% endif %}
+{% if item.CompanyEntered.id %}
+<a href="{% url 'user-company' item.CompanyEntered.id %}">
+
+<p class="text-xxs">{{ item.CompanyEntered.name }}</p>
+</a>  
+{% else %}
+
+<p class="text-xxs">لا يوجد شركة لهذا البحث</p>
+{% endif %}
+
+
+           </td>
 
                     <td class="align-middle text-center text-xxs">
                         <a href="{% url 'user-company' item.owner.id %}">
