--- a/templates/partials/_realExpectTable.html
+++ b/templates/partials/_realExpectTable.html
@@ -54,10 +54,16 @@
 </a>
 
 {% endif %}
-                                <a href="{% url 'user-company' item.CompanyEntered.id %}">
+{% if item.CompanyEntered.id %}
+<a href="{% url 'user-company' item.CompanyEntered.id %}">
 
-                           <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
-</a>
+    <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
+</a>  
+{% else %}
+
+    <p class="text-xxs">لا يوجد شركة لهذا البحث</p>
+{% endif %}
+
 
                    </td>
                             <td>
@@ -131,8 +137,15 @@
 
                             </td>
 
-                         <td class="  text-xxs">
-                               <a href="{{ item.report }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
+                            <td class="align-middle text-center text-xxs">
+                                {% if item.report_url is None  %}
+                               <p class="text-xxs">لا يوجد مرفق </p>
+                                {% else %}
+                                <a href="{{ item.report_url }}">
+                                    <i class="fas fa-file-pdf text-danger">
+                                    </i>
+                                </a>
+                                {% endif %}
                             </td>
                             {% if request.user.is_emp or request.user.is_admin   %}
                             <td class="ms-auto text-start" style="width: 0.2rem;">
