--- a/userInterface/templates/userInterface/analyst-profile.html
+++ b/userInterface/templates/userInterface/analyst-profile.html
@@ -25,11 +25,7 @@
         <div class="row gx-4">
           <div class="col-auto">
             <div class="avatar avatar-xl position-relative">
-              {% if analyst.logo.url != None %}
-                 <img src="{{ analyst.logo.url }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
-                {% else %}
-                   <img src="{% static 'images/logo_analyst.jpeg' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
-                {% endif %}
+                 <img src="{{ analyst.logo_url }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
             </div>
           </div>
           <div class="col-auto my-auto">
