--- a/templates/partials/_expectTable.html
+++ b/templates/partials/_expectTable.html
@@ -100,7 +100,7 @@
                                 {% if item.report_url is None  %}
                                <p class="text-xxs">لا يوجد مرفق </p>
                                 {% else %}
-                                <a href="{{ item.report_url }}">
+                                <a href="/static/images/{{ item.report.name }}">
                                     <i class="fas fa-file-pdf text-danger">
                                     </i>
                                 </a>
